--- a/lib/xclarity_web/components/layouts/app.html.heex
+++ b/lib/xclarity_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<nav class="fixed top-0 z-50 w-full border-b border-gray-200 dark:bg-sky-950 dark:border-gray-700 bg-sky-700">
+<nav class="fixed top-0 z-50 w-full bg-blue-700 border-b border-gray-200 dark:bg-sky-950 dark:border-gray-700">
   <div class="px-3 py-3 lg:px-5 lg:pl-3">
     <div class="flex items-center justify-between">
       <div class="flex items-center justify-start text-white">
@@ -242,7 +242,7 @@
 <div class="p-4 sm:ml-64">
   <div class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700 mt-14">
     <main class="px-4 py-20 sm:px-6 lg:px-8">
-      <div class="max-w-2xl mx-auto">
+      <div class="mx-auto">
         <.flash_group flash={@flash} />
         <%= @inner_content %>
       </div>
